fix: pagina de política de privacidade

--- a/SuaVoz/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SuaVoz/Areas/Identity/Pages/Account/Login.cshtml
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-block loginCadastro__btn ">Entrar</button>
+                <button type="submit" class="btn btn-block fix-button">Entrar</button>
             </div>
         </form>
     </section>
