--- a/SuaVoz/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SuaVoz/Areas/Identity/Pages/Account/Register.cshtml
@@ -47,10 +47,12 @@
             </div>
         </div>
     </div>
+    <div class="group">
     <p>Para maiores informações acesse nossa
         <a asp-area="" asp-controller="Home" asp-action="Privacy">Política de
             Privacidade</a> e nossos <a asp-area="" asp-controller="Home" asp-action="Termos">Termos de Uso</a>.</p>
-    <button type="submit" class="btn btn-block loginCadastro__btn">Criar Conta</button>
+        <button type="submit" class="btn btn-block fix-button">Criar Conta</button>
+    </div>
     </div>
 </form>
 
