--- a/SuaVoz/Views/Home/Index.cshtml
+++ b/SuaVoz/Views/Home/Index.cshtml
@@ -125,7 +125,7 @@
 					<h4 class="lives_card-title">Djamila Ribeiro</h4>
 					<p class="lives_card-paragraph">A filósofa brasileira abre espaço para troca de ideias e uma breve resenha do
 						seu livro "Pequeno manual antirracista".</p>
-					<span class="text-center"><strong>19/01 às 20:00 hrs</strong> <br />
+					<span class="text-center"><strong>19/05 às 20:00 hrs</strong> <br />
 						<i class="fa-brands fa-youtube fa-xl"></i>
 						<i class="fa-brands fa-twitch fa-xl"></i></span>
 					<a class="lives_card-btn">Confirme sua presença</a>
@@ -139,7 +139,7 @@
 					<h4 class="lives_card-title">Silvio de Almeida</h4>
 					<p class="lives_card-paragraph">O professor fala sobre racismo estrutural, como ele se perpetua na sociedade e
 						quais as estratégias de enfrentamento.</p>
-					<span class="text-center"><strong>20/02 às 20:45 hrs</strong> <br />
+					<span class="text-center"><strong>20/04 às 20:45 hrs</strong> <br />
 						<i class="fa-brands fa-youtube fa-xl"></i>
 						<i class="fa-brands fa-twitch fa-xl"></i></span>
 
@@ -154,7 +154,7 @@
 					<h4 class="lives_card-title">Sueli Carneiro</h4>
 					<p class="lives_card-paragraph">Uma das principais autoras do feminismo negro no Brasil, fala sobre sua
 						história e a importância do feminismo negro na sociedade.</p>
-					<span class="text-center"><strong>03/03 às 19:30 hrs</strong> <br />
+					<span class="text-center"><strong>03/07 às 19:30 hrs</strong> <br />
 						<i class="fa-brands fa-youtube fa-xl"></i>
 						<i class="fa-brands fa-twitch fa-xl"></i></span>
 
@@ -185,17 +185,17 @@
 				                                           class="parceiros__img" /> </a>
 			</li>
 			<li class="parceiros_items">
-            	<a href="#" class="parceiros__links">
+            	<a href="https://www.recode.org.br" target="_blank" rel="external" class="parceiros__links">
             		<img src="img/parceiros/logo-recode-azul.png" alt="recode" class="parceiros__img" />
             	</a>
             </li>
 			<li class="parceiros_items">
-            	<a href="#" class="parceiros__links">
+            	<a href="https://www.prefeitura.sp.gov.br/cidade/secretarias/fazenda/" target="_blank" rel="external" class="parceiros__links">
             		<img src="img/parceiros/cidadeSP.png" alt="sp" class="parceiros__img" />
             	</a>
             </li>
 			<li class="parceiros_items">
-				<a href="#" class="parceiros__links">
+				<a href="https://prefeitura.rio/" target="_blank" rel="external" class="parceiros__links">
 					<img src="img/parceiros/prefeiturarj .png" alt="prefeiturarj" class="parceiros__img" />
 				</a>
 			</li>
