--- a/SuaVoz/Views/Home/Privacy.cshtml
+++ b/SuaVoz/Views/Home/Privacy.cshtml
@@ -23,7 +23,7 @@
     <p>O nosso site pode ter links para sites externos que não são operados por nós. Esteja ciente de que não temos
         controle
         sobre o conteúdo e práticas desses sites e não podemos aceitar responsabilidade por suas respectivas <a
-            href='https://politicaprivacidade.com' target='_BLANK'>políticas de privacidade</a>. </p>
+                                                                                                                 href='https://politicaprivacidade.com' target='_BLANK'>políticas de privacidade</a>. </p>
     <p>Você é livre para recusar a nossa solicitação de informações pessoais, entendendo que talvez não possamos
         fornecer
         alguns dos serviços desejados.</p>
@@ -126,7 +126,7 @@
     <ul>
         <li>A) Não se envolver em atividades que sejam ilegais ou contrárias à boa fé a à ordem pública;</li>
         <li>B) Não difundir propaganda ou conteúdo de natureza racista, xenofóbica, <a
-                style='color: inherit !important; text-decoration:none !important;' href='https://jogoshoje.io'>jogos de
+                                                                                        style='color: inherit !important; text-decoration:none !important;' href='https://jogoshoje.io'>jogos de
                 hoje</a> ou azar, qualquer tipo de pornografia ilegal, de apologia ao terrorismo ou contra os direitos
             humanos;</li>
         <li>C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do Sua Voz, de seus fornecedores
@@ -143,3 +143,5 @@
         site.</p>
     <p>Esta política é efetiva a partir de <strong>January</strong>/<strong>2022</strong>.</p>
 </div>
+
+<a href='../wwwroot/arq/Sobre_a_LEI_GETRAL_DE_PROTECAO_DE_DADOS.pdf' download="obre_a_LEI_GETRAL_DE_PROTECAO_DE_DADOS.pdf">Download</a>
