--- a/SuaVoz/Views/Home/Privacy.cshtml
+++ b/SuaVoz/Views/Home/Privacy.cshtml
@@ -125,8 +125,7 @@
         caráter enunciativo, mas não limitativo:</p>
     <ul>
         <li>A) Não se envolver em atividades que sejam ilegais ou contrárias à boa fé a à ordem pública;</li>
-        <li>B) Não difundir propaganda ou conteúdo de natureza racista, xenofóbica, <a
-                                                                                        style='color: inherit !important; text-decoration:none !important;' href='https://jogoshoje.io'>jogos de
+        <li>B) Não difundir propaganda ou conteúdo de natureza racista, xenofóbica, <a style='color: inherit !important; text-decoration:none !important;' href='https://jogoshoje.io'>jogos de
                 hoje</a> ou azar, qualquer tipo de pornografia ilegal, de apologia ao terrorismo ou contra os direitos
             humanos;</li>
         <li>C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do Sua Voz, de seus fornecedores
@@ -142,6 +141,8 @@
         nosso
         site.</p>
     <p>Esta política é efetiva a partir de <strong>January</strong>/<strong>2022</strong>.</p>
+    
+    <a href="https://drive.google.com/file/d/1QMLB-h_uJT2fbcpMVBR1KdpZW4VFXp3A/view?usp=sharing" download="lei.pdf" target="_blank">Lei de proteção de dados</a>
 </div>
 
-<a href='../wwwroot/arq/Sobre_a_LEI_GETRAL_DE_PROTECAO_DE_DADOS.pdf' download="obre_a_LEI_GETRAL_DE_PROTECAO_DE_DADOS.pdf">Download</a>
+
