--- a/SuaVoz/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/SuaVoz/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -15,11 +15,11 @@
 
     <div>
         <hr />
-        <div class="row">
+        <div class="row" style="display: flex; gap: 60px;">
             <div class="col-md-3">
                 <partial name="_ManageNav" />
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 @RenderBody()
             </div>
         </div>
