--- a/SuaVoz/Views/Home/rights.cshtml
+++ b/SuaVoz/Views/Home/rights.cshtml
@@ -7,7 +7,7 @@
 <section class="direitos">
     <div class="direitosHero">
         <div class="container direitosHero__content">
-            <h1 class="direitosHero__content">
+            <h1 class="direitosHero__content align-">
                 Conheça <br />
                 seus Direitos
             </h1>
