--- a/SuaVoz/Views/Home/about.cshtml
+++ b/SuaVoz/Views/Home/about.cshtml
@@ -42,7 +42,7 @@
         </article>
         <article class="aboutProcesso">
             <img src="~/img/undraw_data_processing_yrrv.svg" alt="" class="aboutProcesso__img" />
-            <h2 class="aboutProcesso__title">Conversão e Impacto</h2>
+            <h2 class="aboutProcesso__title">Coletando dados, <br /> produzindo mudanças. </h2>
         </article>
     </div>
 </section>
